--- a/inventory/app/templates/viewProfile.html
+++ b/inventory/app/templates/viewProfile.html
@@ -6,30 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='stylesheet' href='https://beedevservices.github.io/beedev-css/framework/beedev.css'>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-    <title>{{user.firstName}}'s Dashboard</title>
+    <title>Update {{user.firstName}}</title>
 </head>
 <body>
     <header>
-        <h1>Welcome {{user.firstName}} to the Inventory App</h1>
+        <h1>Welcome {{user.firstName}}</h1>
         <img src="{{user.uImg}}" alt="{{user.username}}">
         <nav>
             <a href="/">Home</a>
             <a href="/dashboard">Dashboard</a>
-            <a href="/addInventory">Add Items</a>
-            <a href="/updateUser/{{user.id}}">Update Profile</a>
             <a href="/logout">Logout</a>
+            <a href="/addInventory">Add Items</a>
         </nav>
     </header>
     <main>
-        <div class="row">
-            {% for i in items %}
-                <div class="column">
-                    <h3>Item Name: {{i.iName}}</h3>
-                    <img src="{{i.iImage}}" alt="{{i.iName}}">
-                    <a href="/item/{{i.id}}">View Item Information</a>
-                </div>
-            {% endfor %}
-        </div>
+
     </main>
     <footer>
         Made by Melissa
