--- a/inventory/app/static/css/styles.less
+++ b/inventory/app/static/css/styles.less
@@ -16,6 +16,24 @@ body {
             max-width: 75px;
             border-radius: 50%;
         }
+        nav {
+            button {
+                color: #0dcaf0;
+                border-color: #0dcaf0;
+                color: #0dcaf0;
+                border-color: #0dcaf0;
+                text-align: center;
+                text-decoration: none;
+                vertical-align: middle;
+                background-color: #0dcaf065;
+                border: 1px solid #0dcaf0;
+                padding: 0.375em 0.75em;
+                border-radius: .5em;
+            }
+            button:hover {
+                background-color: #80d5e696;
+            }
+        }
     }
 
     main {
@@ -43,7 +61,58 @@ body {
                 img {
                     max-width: 150px;
                 }
+                button {
+                    color: #0dcaf0;
+                    border-color: #0dcaf0;
+                    color: #0dcaf0;
+                    border-color: #0dcaf0;
+                    text-align: center;
+                    text-decoration: none;
+                    vertical-align: middle;
+                    background-color: #0dcaf065;
+                    border: 1px solid #0dcaf0;
+                    padding: 0.375em 0.75em;
+                    border-radius: .5em;
+                    margin: .5em 0;
+                }
+                button:hover {
+                    background-color: #80d5e696;
+                }
             }
+            form {
+                button {
+                    color: #0dcaf0;
+                    border-color: #0dcaf0;
+                    color: #0dcaf0;
+                    border-color: #0dcaf0;
+                    text-align: center;
+                    text-decoration: none;
+                    vertical-align: middle;
+                    background-color: #0dcaf065;
+                    border: 1px solid #0dcaf0;
+                    padding: 0.375em 0.75em;
+                    border-radius: .5em;
+                }
+                button:hover {
+                    background-color: #80d5e696;
+                }
+            }
+        }
+        button {
+            color: #0dcaf0;
+            border-color: #0dcaf0;
+            color: #0dcaf0;
+            border-color: #0dcaf0;
+            text-align: center;
+            text-decoration: none;
+            vertical-align: middle;
+            background-color: #0dcaf065;
+            border: 1px solid #0dcaf0;
+            padding: 0.375em 0.75em;
+            border-radius: .5em;
+        }
+        button:hover {
+            background-color: #80d5e696;
         }
     }
 }
