--- a/inventory/app/static/css/styles.css
+++ b/inventory/app/static/css/styles.css
@@ -16,6 +16,20 @@ body header img {
   max-width: 75px;
   border-radius: 50%;
 }
+body header nav button {
+  color: #0dcaf0;
+  border-color: #0dcaf0;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  background-color: #0dcaf065;
+  border: 1px solid #0dcaf0;
+  padding: 0.375em 0.75em;
+  border-radius: 0.5em;
+}
+body header nav button:hover {
+  background-color: #80d5e696;
+}
 body main {
   display: flex;
   flex-direction: column;
@@ -39,4 +53,47 @@ body main .row .column {
 }
 body main .row .column img {
   max-width: 150px;
+}
+body main .row .column button {
+  color: #0dcaf0;
+  border-color: #0dcaf0;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  background-color: #0dcaf065;
+  border: 1px solid #0dcaf0;
+  padding: 0.375em 0.75em;
+  border-radius: 0.5em;
+  margin: 0.5em 0;
+}
+body main .row .column button:hover {
+  background-color: #80d5e696;
+}
+body main .row form button {
+  color: #0dcaf0;
+  border-color: #0dcaf0;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  background-color: #0dcaf065;
+  border: 1px solid #0dcaf0;
+  padding: 0.375em 0.75em;
+  border-radius: 0.5em;
+}
+body main .row form button:hover {
+  background-color: #80d5e696;
+}
+body main button {
+  color: #0dcaf0;
+  border-color: #0dcaf0;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  background-color: #0dcaf065;
+  border: 1px solid #0dcaf0;
+  padding: 0.375em 0.75em;
+  border-radius: 0.5em;
+}
+body main button:hover {
+  background-color: #80d5e696;
 }
