--- a/inventory/app/templates/index.html
+++ b/inventory/app/templates/index.html
@@ -11,6 +11,7 @@
 <body>
     <header></header>
     <main>
+        <h1>Inventory Application</h1>
         {% with messages = get_flashed_messages() %}
             {% if messages %}
                 {% for m in messages %}
