--- a/inventory/app/templates/viewItem.html
+++ b/inventory/app/templates/viewItem.html
@@ -13,10 +13,7 @@
         <h1>{{item.iName}}</h1>
         <img src="{{item.iImage}}" alt="{{item.iImage}}">
         <nav>
-            <a href="/">Home</a>
-            <a href="/dashboard">Dashboard</a>
-            <a href="/logout">Logout</a>
-            <a href="/addInventory">Add Items</a>
+            {% block menu %} {% include 'menu.html' %} {% endblock menu %}
         </nav>
     </header>
     <main>
