--- a/inventory/app/templates/dashboard.html
+++ b/inventory/app/templates/dashboard.html
@@ -13,11 +13,7 @@
         <h1>Welcome {{user.firstName}} to the Inventory App</h1>
         <img src="{{user.uImg}}" alt="{{user.username}}">
         <nav>
-            <a href="/">Home</a>
-            <a href="/dashboard">Dashboard</a>
-            <a href="/addInventory">Add Items</a>
-            <a href="/updateUser/{{user.id}}">Update Profile</a>
-            <a href="/logout">Logout</a>
+            {% block menu %} {% include 'menu.html' %} {% endblock menu %}
         </nav>
     </header>
     <main>
