--- a/inventory/app/templates/viewProfile.html
+++ b/inventory/app/templates/viewProfile.html
@@ -13,10 +13,7 @@
         <h1>Welcome {{user.firstName}}</h1>
         <img src="{{user.uImg}}" alt="{{user.username}}">
         <nav>
-            <a href="/">Home</a>
-            <a href="/dashboard">Dashboard</a>
-            <a href="/logout">Logout</a>
-            <a href="/addInventory">Add Items</a>
+            {% block menu %} {% include 'menu.html' %} {% endblock menu %}
         </nav>
     </header>
     <main>
