--- a/inventory/app/templates/menu.html
+++ b/inventory/app/templates/menu.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <body>
     {% block menu %}
-    <a href="/">Home</a>
+    <a href="/home">Home</a>
     <a href="/dashboard">Dashboard</a>
     <a href="/addInventory">Add Items</a>
     <a href="/user/viewUser/{{user.id}}">Profile</a>
