--- a/inventory/app/templates/updateUser.html
+++ b/inventory/app/templates/updateUser.html
@@ -18,7 +18,7 @@
     </header>
     <main>
         <div class="row">
-            <form action="/editUser/{{user.id}}" method='post'>
+            <form action="/user/editUser/{{user.id}}" method='post'>
                 <section>
                     <label for="firstName">First Name: </label>
                     <input type="text" name="firstName" value='{{user.firstName}}'>
